# local-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project  }}/: .pre-commit-config.yaml  Makefile  pyproject.toml
