[tool.poetry]
name = "{{ cookiecutter.project }}"
version = "0.0.0"
description = "{{ cookiecutter.description }}"
authors = ["Federico Trifoglio <federico.trifoglio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 88

[tool.ruff]
select = ["E", "F", "D", "I"]
ignore = ["D417"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "./tests"
]