[tool.poetry]
name = "{{ cookiecutter.project }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["Federico Trifoglio <federico.trifoglio@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">={{ cookiecutter.python_version }}"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 88

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint]
select = ['ANN', 'D', 'F401']
ignore = ['D105', 'D107', 'D203', 'D212', 'ANN101', 'ANN202', 'ANN002', 'ANN003']

[tool.pyright]
pythonVersion = "{{ cookiecutter.python_version }}"
venvPath = "."
venv = ".venv"
reportUnnecessaryTypeIgnoreComment = true
reportPossiblyUnboundVariable = "warning"
reportAttributeAccessIssue = "warning"
